[project]
name = "snowline-musher"
version = "0.0.1"
description = "Snowline Musher — dispatches and supervises headless Claude Code runs against Snowline-governed repos, as a registered plugin service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # Talks to the platform's registration endpoint (POST /plugins).
    "httpx>=0.27",
    # Imported directly (lifespan task group, heartbeat loop) — declared,
    # not ridden transitively via starlette/httpx.
    "anyio>=4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowline_musher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Alembic's revision template emits `op`/`sa` imports an empty migration
# never uses — a fresh `alembic revision` must not fail ruff on F401.
"src/snowline_musher/migrations/versions/*" = ["F401"]
